# rakit

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_full_flow.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/plans/: 0001-auth-jwt.md  0002-content-update.md  0003-collections.md  0004-query-filter.md  0005-rbac.md  0006-schema-validation.md  0007-webhooks.md  0008-media-uploads.md  _template.md
migrations/: 20250101000000_init.sql  20260430000001_users.sql  20260430000002_collections.sql  20260430000003_rbac.sql  20260430000004_schema_validation.sql  20260430000005_webhooks.sql  20260430000006_media.sql
scripts/: dev.sh
src/: main.rs
src/api/: mod.rs
src/api/handlers/: admin.rs  auth.rs  content.rs  health.rs  media.rs  mod.rs  schema.rs  webhook.rs
src/api/routes/: content.rs  mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/errors/: mod.rs
src/middleware/: auth.rs  mod.rs  rbac.rs
src/models/: content.rs  media.rs  mod.rs  rbac.rs  schema.rs  user.rs  webhook.rs
src/services/: auth.rs  content.rs  media.rs  mod.rs  rbac.rs  schema.rs  webhook.rs
src/utils/: mod.rs
tests/integration/: health_test.rs
